# chess-engine

./: .gitignore  CMakeLists.txt  README.md  architecture.md  c.sh
.continue/prompts/: new-prompt.md
include/: Board.hpp  Game.hpp  Render.hpp
src/: Board.cpp  Game.cpp  Render.cpp  main.cpp
